--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -16,6 +16,12 @@
     background: #fff;
 }
 
+.card:hover {
+    box-shadow: 10px 10px 10px grey;
+    transform: scale(102%);
+    
+}
+
 .card__image {
 
     height: 200px;
@@ -23,7 +29,7 @@
     width: 100%;
     border-radius: 15px;
     /* border: 2px solid */
-    
+
 }
 
 .card__image img {
@@ -54,7 +60,7 @@
     text-align: center;
     font-size: 16px;
     flex: 1;
-    margin-bottom: 15px;
+    /* margin-bottom: 15px; */
     font-weight: 300;
 }
 
@@ -62,26 +68,47 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-  }
+    margin-bottom: 15px;
+}
 
-  .card__cost {
+.card__cost {
     font-size: 24px;
     color: #4a60d7;
-    font-weight: 300;
-  }
+    font-weight: 500;
+}
 
-  .button {
+.card__button {
     text-align: center;
     display: inline-flex;
-  padding: 0 15px;
-  background: #4a60d7;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  height: 40px;
-  width: 100px;
-  color: #fff;
-  border-radius: 5px;
-  text-decoration: none;
-  transition: all 0.6s ease;
-  }
+    padding: 5px;
+    background: #4a60d7;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 40px;
+    width: 100px;
+    color: #fff;
+    border-radius: 5px;
+    text-decoration: none;
+
+}
+
+.card__button:hover {
+    filter: brightness(130%);
+    cursor: pointer;
+}
+
+.card__quantity {
+    display: flex;
+    width: 30px;
+    border: none
+}
+
+.quantity {
+    margin: 0 10px;
+}
+
+.quantity__button {
+   cursor: pointer;
+
+}
