--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -11,10 +11,16 @@
     vertical-align: middle;
     text-align: center;
     font-size: 10pt;
-    
-   
-    
-    
-    
+}
 
+.cart {
+    position: absolute;
+    right: 1.25rem;
+    padding: 1.25rem;
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+    --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+    --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+   
 }
