--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,26 +1,26 @@
-.cart__quantity {
-    position: absolute;
-    right: 140px;
-    top: 15px;
-    background-color: grey;
-    color: white;
-    /* background-color: #62DA97; */
-    padding: 1px 8px;
-    align-content: center;
-    border-radius: 100%;
-    vertical-align: middle;
-    text-align: center;
-    font-size: 10pt;
+.header {
+    background: linear-gradient(315deg, #e7eff9 0%, #cfd6e6 74%);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 30px;
 }
 
-.cart {
+.header__logo{
+
+}
+
+.header__cart {
+    position: relative;
+
+}
+
+.header__cart__quantity {
     position: absolute;
-    right: 1.25rem;
-    padding: 1.25rem;
-    --tw-bg-opacity: 1;
-    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-    --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-    --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-   
+    top: -10px;
+    right: -15px;
+    background-color: grey;
+    color: white;
+    border-radius: 50%;
+    padding: 1px 8px;
 }
