--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,8 +1,17 @@
+.container {
+    margin-bottom: 35px; 
+    
+}
+
 .cards_container {
+    opacity: 1;
     display: flex;
-    /* flex-direction: row; */
     flex-wrap: wrap;
-    gap: 1rem
+    gap: 1rem;
+    
+    justify-content: center; 
+   
+    
 }
 
 .card {
@@ -14,6 +23,7 @@
     margin: 10px;
     flex-direction: column;
     background: #fff;
+    box-shadow: 5px 10px 15px  lightgrey;
 }
 
 .card:hover {
