--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,17 +2,24 @@
     background: linear-gradient(315deg, #e7eff9 0%, #cfd6e6 74%);
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 10px 30px;
 }
 
 .header__logo{
+    
 
 }
 
 .header__cart {
-    position: relative;
+    display: flex;
+    align-items: baseline;
 
+}
+
+.header__cart__button {
+    display: flex;
+    position: relative;
 }
 
 .header__cart__quantity {
@@ -23,4 +30,12 @@
     color: white;
     border-radius: 50%;
     padding: 1px 8px;
+}
+
+.header__cart__sum {
+    margin-left: 20px;
+    font-weight: 500;
+    
+    
+    
 }
