--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,11 @@
 }
 
 .app__opacity {
-  /* background: white;
-  opacity: 0.7; */
   background-color: rgba(255, 255, 255, 0.8);
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-center;
 }
