Create modules styles

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,5 +1,7 @@
 .header {
-    width: 100%;
+    width: 100vw;
+    
+    
     background: linear-gradient(315deg, #e7eff9 0%, #cfd6e6 74%);
     padding: 10px 30px;
     display: flex;
@@ -19,7 +21,7 @@
 
 .header__cart {
     display: flex;
-    align-items: center; 
+    align-items: center;
 }
 
 .header__cart img{
@@ -30,6 +32,8 @@
 .header__cart__block {
     display: flex;
     position: relative;
+    margin-right: 10px;
+    cursor: pointer;
 }
 
 .header__cart__quantity {
@@ -50,3 +54,4 @@
     align-self: flex-end;
     text-align: end;   
 }
+
