--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -17,7 +17,7 @@
   border-bottom: 1px solid rgba(128, 128, 128, 0.5);
 }
 
-.cart__item__remove-btn {
+.cart__item__removebtn {
   color: red;
   cursor: pointer;
   display: flex;
